--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -630,7 +630,7 @@ select {
     box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.05), 0 5px 10px 0 rgba(189, 189, 189, 0.15);
 }
 
-.site-header-wrapper.has-sticky-header {
+.sticky-header .site-header-wrapper.has-sticky-header {
     position: fixed;
     top: 0;
     left: 0;
@@ -645,7 +645,7 @@ select {
     }
 }
 
-.site-header-wrapper.has-sticky-header {
+.sticky-header .site-header-wrapper.has-sticky-header {
     box-shadow: 0 1px 0 0 rgba(206, 206, 206, 0.05), 0 5px 10px 0 rgba(132, 132, 132, 0.15);
 }
 
