--- a/assets/css/widgets.css
+++ b/assets/css/widgets.css
@@ -139,6 +139,14 @@
 }
 
 
+ol.wp-block-latest-comments {
+	padding-left: 0;
+}
+
+.wp-block-latest-posts.wp-block-latest-posts__list li {
+    margin-bottom: 1em;
+}
+
 /* Recent comments */
 
 .widget_recent_comments li {
