--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -35,7 +35,7 @@
     border: 1px solid #e8e8e8;
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #fff;
 }
 
