--- a/assets/css/dokan.css
+++ b/assets/css/dokan.css
@@ -166,7 +166,7 @@ button.mfp-arrow {
 
 #dokan-store-listing-filter-wrap {
     border: 1px solid var(--global-border-color);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
 }
 
 #dokan-seller-listing-wrap.list-view {
@@ -338,7 +338,7 @@ body.buddyx-dokan.woocommerce-account ul li.woocommerce-MyAccount-navigation-lin
     padding: 1em;
     border: 1px solid #e8e8e8;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #fff;
 }
 
