--- a/assets/css/eventscalendar.css
+++ b/assets/css/eventscalendar.css
@@ -220,7 +220,7 @@ ul.tribe-events-sub-nav {
     padding: 1em;
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #fff;
 }
 
