--- a/assets/css/learnpress.css
+++ b/assets/css/learnpress.css
@@ -367,18 +367,18 @@ ul.learn-press-nav-tabs .course-nav a:after {
 
 #tab-reviews .course-reviews-list li,
 .course-reviews-list-shortcode li {
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
 }
 
 #tab-reviews .course-rate .review-bar {
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     margin: 0 5px;
     height: 10px;
 }
 
 #tab-reviews .course-rate .review-bar .rating {
     height: 10px;
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #ffb300;
 }
 
@@ -528,7 +528,7 @@ ul.learn-press-nav-tabs .course-nav a:after {
     position: relative;
     border: 1px solid #e8e8e8;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     margin-top: 1em;
     background: #fff;
 }
@@ -537,7 +537,7 @@ ul.learn-press-nav-tabs .course-nav a:after {
     height: auto !important;
     overflow: hidden;
     width: 100%;
-    border-radius: 8px 8px 0 0;
+    border-radius: var(--global-border-radius) var(--global-border-radius) 0 0;
 }
 
 #learn-press-user-profile #learn-press-profile-header .lp-profile-avatar {
@@ -778,5 +778,5 @@ ul.learn-press-nav-tabs .course-nav a:after {
     background: #fff;
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
-    border-radius: 8px!important;
+    border-radius: var(--global-border-radius) !important;
 }
