--- a/assets/css/lifterlms.css
+++ b/assets/css/lifterlms.css
@@ -119,7 +119,7 @@
     width: 100%;
     text-align: center;
     border: 1px solid var(--global-border-color);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
 }
 
 .llms-student-dashboard .llms-sd-item>a:hover {
@@ -150,7 +150,7 @@
     padding: 1em;
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #fff;
 }
 
@@ -192,7 +192,7 @@
     position: relative;
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #fff;
     overflow: hidden;
 }
@@ -272,7 +272,7 @@
     padding: 1em;
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #fff;
 }
 
