--- a/assets/css/platform.css
+++ b/assets/css/platform.css
@@ -91,7 +91,7 @@ img.emojioneemoji {
 
 .activity-update-form:not(.modal-popup) #whats-new-form {
     border: 0;
-    border-radius: 8px !important;
+    border-radius: var(--global-border-radius) !important;
 }
 
 .activity-update-form #whats-new-avatar img {
@@ -101,7 +101,7 @@ img.emojioneemoji {
 .activity-update-form:not(.modal-popup) #whats-new-form #whats-new-toolbar {
     background-color: rgba(0, 0, 0, .02);
     border-top: 1px solid var(--global-border-color);
-    border-radius: 0 0 8px 8px !important;
+    border-radius: 0 0 var(--global-border-radius) var(--global-border-radius) !important;
 }
 
 .bp-nouveau-activity-form-placeholder- .whats-new-form-footer,
@@ -111,21 +111,21 @@ img.emojioneemoji {
 
 .bp-nouveau-activity-form-placeholder-.modal-popup #whats-new-form,
 .activity-update-form.modal-popup #whats-new-form {
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
 }
 
 .bp-nouveau-activity-form-placeholder- .activity-form.focus-in .bb-model-header,
 .activity-update-form .activity-form.focus-in .bb-model-header {
-    border-radius: 8px 8px 0 0;
+    border-radius: var(--global-border-radius) var(--global-border-radius) 0 0;
 }
 
 .bp-nouveau-activity-form-placeholder- .activity-form.focus-in .whats-new-form-footer,
 .activity-update-form .activity-form.focus-in .whats-new-form-footer {
-    border-radius: 0 0 8px 8px;
+    border-radius: 0 0 var(--global-border-radius) var(--global-border-radius);
 }
 
 .activity-update-form .activity-form.focus-in#whats-new-form #whats-new-toolbar {
-    border-radius: 0 0 8px 8px;
+    border-radius: 0 0 var(--global-border-radius) var(--global-border-radius);
 }
 
 .bp-nouveau-activity-form-placeholder- .whats-new-form-footer,
@@ -580,7 +580,7 @@ form.ac-form .ac-reply-content .ac-textarea .ac-input[contenteditable="true"] {
     padding: 1em;
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px !important;
+    border-radius: var(--global-border-radius) !important;
     background: #fff;
 }
 
@@ -617,7 +617,7 @@ body .select2-container .select2-dropdown.bb-compose-input {
 
 body .select2-container .select2-dropdown.bb-compose-input .select2-results__option {
     color: var(--color-link);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     font-size: 13px;
     font-weight: 500;
     padding: 6px 8px;
