--- a/assets/css/wc-vendor.css
+++ b/assets/css/wc-vendor.css
@@ -121,7 +121,7 @@
     border: 1px solid #e8e8e8;
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     background: #fff;
     overflow: hidden;
 }
@@ -328,7 +328,7 @@ table.table-condensed tr:nth-child(even) td {
     background: #fff;
     border: 1px solid #e8e8e8;
     border: 1px solid var(--global-border-color);
-    border-radius: 8px;
+    border-radius: var(--global-border-radius);
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     padding: 10px;
